--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,77 @@
 textarea {
   resize: none;
 }
+
+.form {
+  width: 600px;
+  outline: 1px solid tomato;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
+}
+
+.form-field {
+  /* outline: 1px solid blue; */
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+
+.form-field label {
+  margin-bottom: 5px;
+}
+
+.form-field input {
+  margin: 0;
+  padding: 10px 20px;
+  border-radius: 3px;
+  border: 1px solid #2a2a2a;
+}
+
+.form-field input::placeholder {
+  /* можно стилизировать только текст, другие стили не применятся (геометрию не поддерживает) */
+  color: #2a2a2a;
+  text-align: right;
+}
+
+.group {
+  margin-bottom: 20px;
+}
+
+.group-title {
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+
+.topic-option,
+.experience-option {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.topic-option input[type="checkbox"] {
+}
+
+.topic-option label {
+  font-size: 20px;
+  margin-left: 10px;
+}
+
+.topic-option li {
+  display: flex;
+  align-items: center;
+}
+
+.experience-option {
+}
+
+.form .date {
+  border-width: 5px;
+  border-radius: 4px;
+  padding: 20px 40px;
+}
+
+.comment {
+  padding: 8px;
+}
